--- a/src/Styles/UploadForm.css
+++ b/src/Styles/UploadForm.css
@@ -2,7 +2,7 @@
 /* форма загрузки со всеми полями ввода */
 .grid-container {
     display: grid;
-    grid-template-columns: 50% 50% ;
+    grid-template-columns: 1fr 1fr ;
     gap: 10px;
 }
 
